src/validation/tests/snapshots/rusty__validation__tests__statement_validation_tests__validate_array_elements_passed_to_functions_by_ref.snap
---
source: src/validation/tests/statement_validation_tests.rs
expression: "&diagnostics"
---
error[E037]: Invalid assignment: cannot assign 'ARRAY[0..1] OF INT' to 'INT'
   ┌─ <internal>:17:18
   │
17 │             func(x, x);                                    // Invalid because we pass a whole array
   │                  ^ Invalid assignment: cannot assign 'ARRAY[0..1] OF INT' to 'INT'

error[E037]: Invalid assignment: cannot assign 'ARRAY[0..1] OF INT' to 'INT'
   ┌─ <internal>:17:21
   │
17 │             func(x, x);                                    // Invalid because we pass a whole array
   │                     ^ Invalid assignment: cannot assign 'ARRAY[0..1] OF INT' to 'INT'
